# project_template

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CITATION.cff  COMPLETE_SUMMARY.md  CONTRIBUTING.md  CONVENIENCE_SUMMARY.md  DATA_AVAILABILITY.md  Dockerfile  EFFICIENCY_ANALYSIS.md  GETTING_STARTED_VSCODE.md  JOURNAL_EXCLUDE  LICENSE  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  QUICKSTART.md  README.md  REPRO_TOOLS_MIGRATION.md  TEMPLATE_USAGE.md  _version.py  bootstrap.py  build_price_base.py  build_remodel_base.py  config.py  flake.nix  pyproject.toml  run_analysis.py  run_analysis.py.backup  run_did.py
.claude/: settings.json  settings.local.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
data/: CHECKSUMS.txt  DATA_README.md  README.md  housing_panel.csv  panel_data.csv
dev-notes/: PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md
docs/: NOTEBOOK_SUPPORT_IMPLEMENTATION.md  README.md  defaults_system.md  directory_structure.md  environment.md  expected_outputs.md  flexible_analyses.md  journal_editor_readme.md  julia_python_integration.md  makefile_improvements.md  notebook_interactive_workflow.md  notebook_support.md  paper_output_mapping.md  platform_compatibility.md  provenance.md  publishing.md  repro_tools_submodule.md  running_locally_vs_docker.md  submodule_cheatsheet.md  troubleshooting.md  using_repro_tools.md  vscode_integration.md
env/: Makefile  Manifest.toml  Project.toml  python.yml  stata-packages.txt
env/examples/: README.md  sample_juliacall.py  sample_stata.do
env/scripts/: execute.ado  install_julia.py  install_micromamba.sh  install_uv.sh  runjulia  runnotebook  runpython  runstata
examples/: README.md  sample_julia.jl  sample_juliacall.py  sample_python.py
notebooks/: correlation_analysis.ipynb  julia_demo.ipynb
scripts/: bump_version.py  check_git_state.py  check_prerequisites.sh  compare_outputs.py  generate_replication_report.py  init-private.sh  log_system_info.py  pre_submit_check.py  provenance.py  publish_artifacts.py  publish_specific_files.py  record_provenance.py  remove_analysis.py
shared/: README.md  __init__.py  cli.py  config.py  config_validator.py
tests/: NOTEBOOK_TESTS_SUMMARY.md  README.md  TEST_IMPROVEMENTS.md  __init__.py  test_defaults.py  test_environment.py  test_integration.py  test_notebook_integration.py  test_private_overlay.py  test_provenance.py  test_publishing.py  test_shared_cli.py  test_shared_integration.py  test_shared_validation.py
